--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,14 @@
 @use "hero";
+@use 'components/infos_bar';
+@use 'components/buttons';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color: #FFF;
+    color: #fff;
+    list-style: none;
 }
 
 .container {
@@ -17,7 +20,7 @@
         width: 80%;
     }
 
-    @media (min-width: 645px) and (max-width: 1024px){
+    @media (min-width: 641px) and (max-width: 1024px){
         width: 90%;
     }
 }
